--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="panel-heading" id="panelHead">
                           <h3 class="panel-title">Top Articles</h3>
                         </div>
-                        <div class="panel-body">
+                        <div class="panel-body" id="choose_this">
                           
                         </div>
                       </div>
@@ -78,6 +78,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js "></script>
     <!-- Bootstrap JavaScript CDN -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js "></script>
+    <!-- Local JS -->
+    <script src="./time.js"></script>
 </body>
 
 </html>
